--- a/content/translation/neutral-heroes/german.json
+++ b/content/translation/neutral-heroes/german.json
@@ -1,47 +1,48 @@
 {
-    "hero.campaign-heroes.finneasVilmar.biography": "Obwohl Finneas Vilmars Machthunger ihn zu einem praktisch unaufhaltsamen Nekromanten macht, entziehen sich ihm die Fähigkeiten der politischen Manipulation und der Kampftaktik. Er hat sich mit Sandro zusammengetan, damit er seine Fähigkeiten nutzen kann, um in den Rängen aufzusteigen.",
-    "hero.campaign-heroes.finneasVilmar.name": "Finneas",
-    "hero.campaign-heroes.finneasVilmar.specialty.description": "{Belebt Tote}\r\n\r\nWirkt den Zauber Belebt Tote mit erhöhter Wirkung, basierend auf der Heldenstufe im Vergleich zur Stufe der Zieleinheit.",
-    "hero.campaign-heroes.finneasVilmar.specialty.name": "Belebt Tote",
-    "hero.campaign-heroes.finneasVilmar.specialty.tooltip": "Zauberspruch-Bonus: Belebt Tote",
-    "hero.campaign-heroes.generalKendal.biography": "Nach der Ermordung von König Gryphonheart übernahm General Morgan Kendal vorübergehend den Thron, bis ein neuer Nachfolger gefunden werden konnte. Die Geschichte wird ihn als den einzigen Herrscher Erathias in Erinnerung behalten, der es zuließ, dass die Hauptstadt Steadwick eingenommen wurde.",
-    "hero.campaign-heroes.generalKendal.name": "Morgan",
-    "hero.campaign-heroes.generalKendal.specialty.description": "{Gold}\r\n\r\nErhöht das Einkommen des Königreichs um 350 Gold pro Tag.",
-    "hero.campaign-heroes.generalKendal.specialty.name": "+350 Gold",
-    "hero.campaign-heroes.generalKendal.specialty.tooltip": "+350 Gold pro Tag",
-    "hero.campaign-heroes.ordwald.biography": "Ordwald war der mächtigste Herr in Nighon. Er war ein alter, aber mächtiger Hexenmeister, der seine Ländereien von seinem viel größeren Vater erhalten hatte. Er lehnte die Kunst der Krieger ab und wandte sich der Magie zu. Das bedeutet wahrscheinlich, dass sein Vater ein mächtiger Dungeon Overlord von Nighon war. Er versuchte, die Phiole des Drachenblutes zu erlangen und war der größte Feind und Herausforderer von Mutare.",
-    "hero.campaign-heroes.ordwald.name": "Ordwald",
-    "hero.campaign-heroes.ordwald.specialty.description": "{Berserker}\r\n\r\nWirkt Berserker mit erhöhtem Effekt, basierend auf der Heldenstufe im Vergleich zur Stufe der Zieleinheit (der Bonus ist größer, wenn er auf schwächere Einheiten angewendet wird).",
-    "hero.campaign-heroes.ordwald.specialty.name": "Berserker",
-    "hero.campaign-heroes.ordwald.specialty.tooltip": "Zauberspruch-Bonus: Berserker",
-    "hero.campaign-heroes.youngAlkin.biography": "König Tralossk mochte Alkin nie wirklich, übertrug ihm aber ein eigenes Kommando, in der Hoffnung, dass er sich eines Tages umbringen lassen würde. Das ist nie passiert, und Alkin hat eine lange und ruhmreiche Karriere hinter sich, sehr zum Missfallen des Königs.",
-    "hero.campaign-heroes.youngAlkin.name": "Alkin",
-    "hero.campaign-heroes.youngAlkin.specialty.description": "{Gorgonen}\r\n\r\nErhöht die Angriffs- und Verteidigungsfähigkeiten aller Gorgonen oder Mächtigen Gorgonen für jede Stufe, die nach der 5. Stufe erreicht wird.",
-    "hero.campaign-heroes.youngAlkin.specialty.name": "Gorgonen",
-    "hero.campaign-heroes.youngAlkin.specialty.tooltip": "Kreaturen-Bonus: Gorgonen",
-    "hero.campaign-heroes.youngCatherine.biography": "Als amtierende Königin von Erathia führt Katharina weiterhin Krieg, um die Grenzen ihres Heimatlandes zu sichern und den von ihrem Vater geschaffenen Frieden wiederherzustellen. Allerdings schwindet die Unterstützung für ihre Position, da das Land des Krieges überdrüssig wird.",
-    "hero.campaign-heroes.youngCatherine.name": "Catherine",
-    "hero.campaign-heroes.youngCatherine.specialty.description": "{Gold}\r\n\r\nErhöht die Angriffs- und Verteidigungsfähigkeiten eines Schwertkämpfers oder Kreuzritters für jede Stufe, die er nach der vierten Stufe erreicht.",
-    "hero.campaign-heroes.youngCatherine.specialty.name": "Schwertkämpfer",
-    "hero.campaign-heroes.youngCatherine.specialty.tooltip": "Kreaturen-Bonus: Schwertkämpfer",
-    "hero.campaign-heroes.youngChristian.biography": "Christian war schon immer eher ein Grenzgänger als ein Ritter. Er war in fast allen Teilen Enroths unterwegs, bevor er sich schließlich in Erathia zum Militärdienst niederließ. Obwohl er ein Wanderer und ein wenig Träumer ist, sind seine Taktiken auf dem Schlachtfeld in der ganzen Welt gefürchtet.",
-    "hero.campaign-heroes.youngChristian.name": "Christian",
-    "hero.campaign-heroes.youngChristian.specialty.description": "{Ballista}\r\n\r\nErhöht die Angriffs- und Verteidigungsfähigkeiten einer beliebigen Ballista alle 4 Stufen um 5% (aufgerundet).",
-    "hero.campaign-heroes.youngChristian.specialty.name": "Ballista",
-    "hero.campaign-heroes.youngChristian.specialty.tooltip": "Ballista-Bonus",
-    "hero.campaign-heroes.youngGem.biography": "Gem war eine der größten Zauberinnen, die Enroth je gesehen hatte, und diente König Roland Eisenfaust während der Erbfolgekriege. Kurz nachdem Roland sich den Thron von Enroth gesichert hatte, ging Gem nach Antagarich.",
-    "hero.campaign-heroes.youngGem.name": "Edelstein",
-    "hero.campaign-heroes.youngGem.specialty.description": "{Erste Hilfe}\r\n\r\nErhält einen Bonus von 5% pro Stufe auf die Erste-Hilfe-Fertigkeit.",
-    "hero.campaign-heroes.youngGem.specialty.name": "Erste Hilfe",
-    "hero.campaign-heroes.youngGem.specialty.tooltip": "Sekundärer Fertigkeitsbonus: Erste Hilfe",
-    "hero.campaign-heroes.youngSandro.biography": "Sandro erlernte die Nekromantie zunächst unter der Anleitung des Zauberers und später des Lichs Ethric. Sandro hat fast ganz Enroth und Erathia gesehen und dient nun Finneas Vilmar, dem Anführer der Nekromanten von Deyja.",
-    "hero.campaign-heroes.youngSandro.name": "Sandro",
-    "hero.campaign-heroes.youngSandro.specialty.description": "{Zauberei}\r\n\r\nErhält einen Bonus von 5% pro Stufe auf den Prozentsatz der Zauberei-Fertigkeit.",
-    "hero.campaign-heroes.youngSandro.specialty.name": "Zauberei",
-    "hero.campaign-heroes.youngSandro.specialty.tooltip": "Sekundärer Fertigkeitsbonus: Zauberei",
-    "hero.campaign-heroes.youngYog.biography": "Yog hat viele Jahre bei den Zauberern von Bracada studiert, aber er verbringt seine Zeit lieber mit dem Schwertkampf als mit dem Studium der Magie.",
-    "hero.campaign-heroes.youngYog.name": "Yog",
-    "hero.campaign-heroes.youngYog.specialty.description": "{Kettenblitz}\r\n\r\nWirkt einen Kettenblitz-Zauber, dessen Effekt für alle n Heldenstufen (n - Stufe der Zielkreatur) um 3% erhöht wird.",
-    "hero.campaign-heroes.youngYog.specialty.name": "Kettenblitz",
-    "hero.campaign-heroes.youngYog.specialty.tooltip": "Zauberspruch-Bonus: Kettenblitz"
+    "creatures.neutral-heroes.nhHalfling.name.plural": "Pfadfinder",
+    "creatures.neutral-heroes.nhHalfling.name.singular": "Pfadfinder",
+    "hero.neutral-heroes.ernest.biography": "Ernest ist seit langem ein geachtetes Mitglied der Gemeinde. Wenn es zu Unruhen und Krieg kommt, ist Ernest in der Regel der Erste, der aufsteht und die Bauernschaft organisiert, um ihre Häuser zu verteidigen, und sie zu einer Streitmacht macht, die jeden General stolz machen würde.",
+    "hero.neutral-heroes.ernest.name": "Ernest",
+    "hero.neutral-heroes.ernest.specialty.description": "{Bauern}\r\n\r\nErhöht die Geschwindigkeit und den Schaden der Bauern um 1 pro 5 Stufen. Außerdem wird das Einkommen des Königreichs um 350 erhöht.",
+    "hero.neutral-heroes.ernest.specialty.name": "Bauern/Gold",
+    "hero.neutral-heroes.ernest.specialty.tooltip": "Bonus: Bauern, Gold",
+    "hero.neutral-heroes.kharnus.biography": "Kharnus war schon immer ein Bewunderer der menschlichen Reiter, selbst wenn er gegen sie kämpfte. Er fand diese edlen Ritter so inspirierend, dass er sie jahrelang studierte und dann seinen Kader von Wildschweinreitern bis zu einem hohen Grad ausbildete. Heute ist seine Eberbrigade jeder Kavallerieeinheit ebenbürtig und hat sich den widerwilligen Respekt vieler Generäle erworben.",
+    "hero.neutral-heroes.kharnus.name": "Kharnus",
+    "hero.neutral-heroes.kharnus.specialty.description": "{Wildschweine}\r\n\r\nErhöht Angriff und Verteidigung aller Wildschweine um 5% für jeweils 2 Stufen. Außerdem erhalten Wildschweine die Fähigkeit \"Ausrichten von Champions\". Außerdem erzeugen Wildschweine täglich einen Stapel Holz und Erz.",
+    "hero.neutral-heroes.kharnus.specialty.name": "Wildschweine/Holz/Erde",
+    "hero.neutral-heroes.kharnus.specialty.tooltip": "Bonus: Wildschweine, Holz, Erze",
+    "hero.neutral-heroes.melfis.biography": "Melfis wurde in die Gilde der Diebe aufgenommen, als seine Familie bei einem Angriff der Magog auf ihr Dorf getötet wurde. Er trainierte hart in der Gilde, wurde zu einem der fähigsten Schurken und stieg in der Befehlskette auf, wobei er immer seinen Hass auf die Gog und Magog im Hinterkopf behielt und immer wusste, dass er eines Tages den Stamm, der seine Familie abgeschlachtet hatte, jagen und vernichten würde.",
+    "hero.neutral-heroes.melfis.name": "Melfis",
+    "hero.neutral-heroes.melfis.specialty.description": "{Schurken}\r\n\r\nErhöht Angriff und Verteidigung aller Schurken alle 2 Stufen um 5%. Außerdem hassen alle Kreaturen unter Melfis Befehl Gogs und Magogs. Erzeugt täglich einen Edelstein und einen Kristall.",
+    "hero.neutral-heroes.melfis.specialty.name": "Schurken/Gold",
+    "hero.neutral-heroes.melfis.specialty.tooltip": "Bonus: Schurken, Gold",
+    "hero.neutral-heroes.orma.biography": "Orma ist die Anführerin der Gemeinschaft der Halblinge und wird von ihren Völkern geliebt. Im Kampf ist sie furchtlos und weise, und man sagt, dass sie Energiesteine mit der Genauigkeit des stärksten magischen Pfeilzaubers schleudern kann.",
+    "hero.neutral-heroes.orma.name": "Orma",
+    "hero.neutral-heroes.orma.specialty.description": "{Halblinge}\r\n\r\nErhöht Angriff und Verteidigung aller Halblinge um 5% für jede Stufe und Halblinge können schießen, auch wenn sie sonst blockiert sind. Neben Orma kann Magischer Pfeil mit erhöhtem Effekt gewirkt werden.",
+    "hero.neutral-heroes.orma.specialty.name": "Halblinge/Magischer Pfeil",
+    "hero.neutral-heroes.orma.specialty.tooltip": "Bonus: Halblinge, magischer Pfeil",
+    "hero.neutral-heroes.oshmar.biography": "Oshmar ist einer der stärksten und mächtigsten Trolle im Land und eine Inspiration für seine Artgenossen. Die meisten anderen Völker würden auch zustimmen, dass er einer der hässlichsten Trolle ist, eine Tatsache, auf die er sehr stolz ist.",
+    "hero.neutral-heroes.oshmar.name": "Oshmar",
+    "hero.neutral-heroes.oshmar.specialty.description": "{Trolle}\r\n\r\nErhöht den maximalen Schaden eines Trolls alle 5 Stufen um 5%. Der Held nebenan kann Heilung mit erhöhtem Effekt wirken.",
+    "hero.neutral-heroes.oshmar.specialty.name": "Trolle/Kur",
+    "hero.neutral-heroes.oshmar.specialty.tooltip": "Bonus: Trolle, Heilung",
+    "hero.neutral-heroes.romires.biography": "Romires ist ein geschickter Reiter mit wenigen Rivalen. Seine Reitkünste sind so berühmt, dass sein Stamm ihm mit unerschütterlicher Loyalität folgt und sich die \"Ritter von Romires\" nennt.",
+    "hero.neutral-heroes.romires.name": "Romire",
+    "hero.neutral-heroes.romires.specialty.description": "{Nomaden}\r\n\r\nErhöht die Geschwindigkeit von Nomaden um 1 und gewährt ihnen einen zusätzlichen Angriff. Dafür generieren Nomaden einen glänzenden Edelstein pro Tag.",
+    "hero.neutral-heroes.romires.specialty.name": "Nomaden/Edelsteine",
+    "hero.neutral-heroes.romires.specialty.tooltip": "Bonus: Nomaden, Edelsteine",
+    "hero.neutral-heroes.xanthus.biography": "Xanthus stieg während des Zorns der Götter zur Macht auf und wurde schnell als \"Herr der Golems\" bekannt, weil er seine Gefährten mit fast übernatürlichen Fähigkeiten in die Schlacht führen konnte und viele seiner Truppen scheinbar aus dem Nichts herbeirief.",
+    "hero.neutral-heroes.xanthus.name": "Xanthus",
+    "hero.neutral-heroes.xanthus.specialty.description": "{Golems}\r\n\r\nWährend des Kampfes vom Totenstapel können Gold-Golems Eisen-Golems und Diamant-Golems Stein-Golems beschwören. Neben den Helden erhöht sich das Einkommen des Königreichs um 350.",
+    "hero.neutral-heroes.xanthus.specialty.name": "Golems/Gold",
+    "hero.neutral-heroes.xanthus.specialty.tooltip": "Bonus: Golems, Gold",
+    "hero.neutral-heroes.zarantiri.biography": "Zarantiri ist eine mächtige Mumie, von der es heißt, dass sie von den Göttern selbst auserwählt wurde, um Chaos zu stiften und Chaos zu verbreiten. Zarantiri scheint mit der Fähigkeit gesegnet worden zu sein, andere Mumien unter ihrem Kommando zu stärken und ihre Feinde mit mächtigen Flüchen zu belegen.",
+    "hero.neutral-heroes.zarantiri.name": "Zarantiri",
+    "hero.neutral-heroes.zarantiri.specialty.description": "{Mumien}\r\n\r\nErhöht den maximalen Schaden aller Mumien alle 3 Stufen um 5%. Neben dem Helden kann Fluch mit erhöhtem Effekt gewirkt werden.",
+    "hero.neutral-heroes.zarantiri.specialty.name": "Mumien/Fluch",
+    "hero.neutral-heroes.zarantiri.specialty.tooltip": "Bonus: Mumien, Fluch",
+    "heroClass.neutral-heroes.drifterF.name": "Drifter",
+    "heroClass.neutral-heroes.drifterM.name": "Drifter",
+    "spell.neutral-heroes.summonIronGolem.name": "Eisengolems beschwören",
+    "spell.neutral-heroes.summonStoneGolem.name": "Steingolems beschwören"
 }
