update Chinese translation

--- a/content/translation/neutral-heroes/chinese.json
+++ b/content/translation/neutral-heroes/chinese.json
@@ -7,62 +7,62 @@
 	"hero.neutral-heroes.ernest.name" : "厄内斯特",
 	"hero.neutral-heroes.ernest.specialty.description" : "达到5级以后提高农民的攻击力与防御力。为王国每天额外提供350个金币。",
 	"hero.neutral-heroes.ernest.specialty.name" : "农民/金币",
-	"hero.neutral-heroes.ernest.specialty.tooltip" : "Bonus: Peasants, gold",
+	"hero.neutral-heroes.ernest.specialty.tooltip" : "特长：农民，金币",
 	"hero.neutral-heroes.hota_heroes.amron.biography" : "通常，钢铁魔像独自住在实验车间。阿姆龙经常光顾这些地方，即使只是为了给它们上油。这使得在他的指挥下的钢铁魔像更加危险。",
 	"hero.neutral-heroes.hota_heroes.amron.name" : "阿姆龙",
 	"hero.neutral-heroes.hota_heroes.amron.specialty.description" : "将铁人升级为钢人，所带领的钢人获得100%魔法伤害减免特技。为王国每天额外提供2矿石。",
 	"hero.neutral-heroes.hota_heroes.amron.specialty.name" : "钢人/矿石",
-	"hero.neutral-heroes.hota_heroes.amron.specialty.tooltip" : "Bonus: Steel Golems, ore",
+	"hero.neutral-heroes.hota_heroes.amron.specialty.tooltip" : "特长：钢人，矿石",
 	"hero.neutral-heroes.hota_heroes.azirus.biography" : "阿基鲁斯是一个强大而高贵的半羊人，他的音乐似乎并不能抚慰野蛮的兽类，但实际上却展现出他的同族的野蛮战斗技巧。",
 	"hero.neutral-heroes.hota_heroes.azirus.name" : "阿基鲁斯",
 	"hero.neutral-heroes.hota_heroes.azirus.specialty.description" : "达到4级以后提高半羊人的攻击力与防御力。为王国每天额外提供250个金币，1木材和矿石。",
 	"hero.neutral-heroes.hota_heroes.azirus.specialty.name" : "半羊人/基础资源",
-	"hero.neutral-heroes.hota_heroes.azirus.specialty.tooltip" : "Bonus: Satyrs, gold, woor, ore",
+	"hero.neutral-heroes.hota_heroes.azirus.specialty.tooltip" : "特长：半羊人，金币，木材，矿石",
 	"hero.neutral-heroes.hota_heroes.godfrey.biography" : "自出生以来，财富一直与妖精一族联系在一起。每隔几年，妖精就会出生，并拥有非凡的幸福。葛德弗雷本人并不完全知道为什么他在世的亲族可以像凤凰一样从灰烬中重生。他用……财富，来解释这一点。",
 	"hero.neutral-heroes.hota_heroes.godfrey.name" : "葛德弗雷",
 	"hero.neutral-heroes.hota_heroes.godfrey.specialty.description" : "所带领的丛林妖精获得复活特技。为王国每天额外提供1水晶。",
 	"hero.neutral-heroes.hota_heroes.godfrey.specialty.name" : "丛林妖精/水晶",
-	"hero.neutral-heroes.hota_heroes.godfrey.specialty.tooltip" : "Leprechaun, crystal generation",
+	"hero.neutral-heroes.hota_heroes.godfrey.specialty.tooltip" : "特长：丛林妖精，水晶",
 	"hero.neutral-heroes.hota_heroes.oukranos.biography" : "奥克拉努斯是一位令人着迷的领导者，他的夺心魔部队有着异常坚定的忠诚。尽管有人说他奴役了夺心魔的意志，但他们表示是遵循自己的自由意志追随着他。",
 	"hero.neutral-heroes.hota_heroes.oukranos.name" : "奥克拉努斯",
 	"hero.neutral-heroes.hota_heroes.oukranos.specialty.description" : "达到5级以后提高夺心魔的攻击力与防御力，所带领的夺心魔获得不受反击特技。使用蛊惑人心魔法时效果为最高级。",
 	"hero.neutral-heroes.hota_heroes.oukranos.specialty.name" : "夺心魔/蛊惑人心",
-	"hero.neutral-heroes.hota_heroes.oukranos.specialty.tooltip" : "Bonus: Fangarms, Hipnotize",
+	"hero.neutral-heroes.hota_heroes.oukranos.specialty.tooltip" : "特长：夺心魔，蛊惑人心",
 	"hero.neutral-heroes.kharnus.biography" : "虽然一直与骑士敌对，但哈尔努斯也一直是他们的仰慕者。他发现这些高贵的骑士是如此鼓舞人心，他研究了他们很多年，然后在很大程度上重新训练了他的野猪骑兵部队。现在，他的“野猪旅”可以与任何一支骑兵部队匹敌，并赢得了许多将军的真心尊重。",
 	"hero.neutral-heroes.kharnus.name" : "哈尔努斯",
 	"hero.neutral-heroes.kharnus.specialty.description" : "达到2级以后提高野猪的攻击力与防御力，所带领的野猪获得冲锋特技。为王国每天额外提供1木材和矿石。",
 	"hero.neutral-heroes.kharnus.specialty.name" : "野猪/木材/矿石",
-	"hero.neutral-heroes.kharnus.specialty.tooltip" : "Bonus: Boars, wood, ore",
+	"hero.neutral-heroes.kharnus.specialty.tooltip" : "特长：野猪，木材，矿石",
 	"hero.neutral-heroes.melfis.biography" : "当梅尔菲斯的家人因其村庄遭玛各袭击而被杀后，梅尔菲斯被带到了盗贼行会。因此，他在行会中刻苦训练，成为最熟练的盗贼之一，并且在指挥系统中不断攀升，始终牢记对歌革和玛各的仇恨，他知道自己总有一天会追捕并消灭那些屠杀了他家人的仇敌。",
 	"hero.neutral-heroes.melfis.name" : "梅尔菲斯",
 	"hero.neutral-heroes.melfis.specialty.description" : "达到2级以后提高盗贼的攻击力与防御力，所带领的盗贼获得憎恨歌革和玛各特技。为王国每天额外提供1宝石和水晶。",
 	"hero.neutral-heroes.melfis.specialty.name" : "盗贼/宝石/水晶",
-	"hero.neutral-heroes.melfis.specialty.tooltip" : "Bonus: Rogues, gold",
+	"hero.neutral-heroes.melfis.specialty.tooltip" : "特长：盗贼，宝石，水晶",
 	"hero.neutral-heroes.orma.biography" : "半身人社区的领袖奥尔玛深受她的族民喜爱。在战斗中，她明智而无所畏惧，据说她可以用最强的魔箭术法来投掷能量石。",
 	"hero.neutral-heroes.orma.name" : "奥尔玛",
 	"hero.neutral-heroes.orma.specialty.description" : "达到1级以后提高投石矮人的攻击力与防御力，所带领的投石矮人获得近身射击特技。擅长“魔法神箭”魔法(杀伤力+50%)。",
 	"hero.neutral-heroes.orma.specialty.name" : "投石矮人/魔法神箭",
-	"hero.neutral-heroes.orma.specialty.tooltip" : "Bonus: Halflings, magic arrow",
+	"hero.neutral-heroes.orma.specialty.tooltip" : "特长：投石矮人，魔法神箭",
 	"hero.neutral-heroes.oshmar.biography" : "奥什玛是最强大的恶鬼之一，大大鼓舞了他的同胞亲属。其他大多数种族也同意他是最丑陋的恶鬼之一，这是他非常自豪的事实。",
 	"hero.neutral-heroes.oshmar.name" : "奥什玛",
 	"hero.neutral-heroes.oshmar.specialty.description" : "达到5级以后提高恶鬼的攻击力与防御力。擅长“疗伤”魔法(治疗生命值+50%)。",
 	"hero.neutral-heroes.oshmar.specialty.name" : "恶鬼/疗伤",
-	"hero.neutral-heroes.oshmar.specialty.tooltip" : "Bonus: Trolls, cure",
+	"hero.neutral-heroes.oshmar.specialty.tooltip" : "特长：恶鬼，疗伤",
 	"hero.neutral-heroes.romires.biography" : "罗米尔是一位熟练的马术选手，几乎没有对手。他的骑马技巧非常出名，以至于他的部落坚定不移地忠于他，并自称为“罗米尔骑士团”。",
 	"hero.neutral-heroes.romires.name" : "罗米尔",
 	"hero.neutral-heroes.romires.specialty.description" : "使游牧民攻击力+1并获得攻击2次特技。为王国每天额外提供1宝石。",
 	"hero.neutral-heroes.romires.specialty.name" : "游牧民/宝石",
-	"hero.neutral-heroes.romires.specialty.tooltip" : "Bonus: Nomads, gems",
+	"hero.neutral-heroes.romires.specialty.tooltip" : "特长：游牧民，宝石",
 	"hero.neutral-heroes.xanthus.biography" : "赞瑟斯在众神之怒中创生，由于他以几乎超自然的能力带领同伴们战斗的伟绩而被称为“魔像之王”，他似乎能从稀薄的空气中源源不断地召唤出部队。",
 	"hero.neutral-heroes.xanthus.name" : "赞瑟斯",
 	"hero.neutral-heroes.xanthus.specialty.description" : "可从战场上阵亡的金人召唤出铁人，从战场上阵亡的钻石人召唤出石人。为王国每天额外提供350个金币。",
-	"hero.neutral-heroes.xanthus.specialty.name" : "人偶/金币",
-	"hero.neutral-heroes.xanthus.specialty.tooltip" : "Bonus: Golems, gold",
+	"hero.neutral-heroes.xanthus.specialty.name" : "魔像/金币",
+	"hero.neutral-heroes.xanthus.specialty.tooltip" : "特长：魔像，金币",
 	"hero.neutral-heroes.zarantiri.biography" : "扎兰蒂里是一位强大的木乃伊，据说她是由众神们亲自创造的，在世间造成了严重破坏并成为混乱的代理人。扎兰蒂里幸运地能够对其他木乃伊下达指令，并以有力的诅咒打击她的敌人。",
 	"hero.neutral-heroes.zarantiri.name" : "扎兰蒂里",
 	"hero.neutral-heroes.zarantiri.specialty.description" : "达到3级以后提高木乃伊的攻击力与防御力。使用恶咒附身魔法时效果大增，但还要取决于英雄级别与目标级别之差(目标的级别越低，效果越好)。",
 	"hero.neutral-heroes.zarantiri.specialty.name" : "木乃伊/恶咒附身",
-	"hero.neutral-heroes.zarantiri.specialty.tooltip" : "Bonus: Mummies, Curse",
+	"hero.neutral-heroes.zarantiri.specialty.tooltip" : "特长：木乃伊，恶咒附身",
 	"heroClass.neutral-heroes.drifterF.name" : "浪人",
 	"heroClass.neutral-heroes.drifterM.name" : "浪人"
 }
