update Chinese translation

--- a/content/translation/neutral-heroes/chinese.json
+++ b/content/translation/neutral-heroes/chinese.json
@@ -63,6 +63,81 @@
 	"hero.neutral-heroes.zarantiri.specialty.description" : "达到3级以后提高木乃伊的攻击力与防御力。使用恶咒附身魔法时效果大增，但还要取决于英雄级别与目标级别之差(目标的级别越低，效果越好)。",
 	"hero.neutral-heroes.zarantiri.specialty.name" : "木乃伊/恶咒附身",
 	"hero.neutral-heroes.zarantiri.specialty.tooltip" : "特长：木乃伊，恶咒附身",
+    "hero.neutral-heroes.hotaneutralheroes.amron.biography": "钢人一般独自居住在炼金实验室中。安隆经常造访这个地方，即使只是给它们上上油。这段经历使得钢人在他的指挥下更加危险。",
+    "hero.neutral-heroes.hotaneutralheroes.amron.name": "安隆",
+    "hero.neutral-heroes.hotaneutralheroes.amron.specialty.description": "{钢人}\r\n\r\n可以将铁人升级成钢人，安隆部队里的钢人有100%的法术伤害抵抗。此外，安隆为王国每天额外提供2矿石。",
+    "hero.neutral-heroes.hotaneutralheroes.amron.specialty.name": "钢人/矿石",
+    "hero.neutral-heroes.hotaneutralheroes.amron.specialty.tooltip": "特长：钢人，矿石",
+    "hero.neutral-heroes.hotaneutralheroes.azirus.biography": "阿兹鲁斯是一位强大而高贵的半人羊，他的音乐似乎不是为了安抚野兽，而是为了激发了他的半人羊追随者的野性战斗技巧。",
+    "hero.neutral-heroes.hotaneutralheroes.azirus.name": "阿兹鲁斯",
+    "hero.neutral-heroes.hotaneutralheroes.azirus.specialty.description": "{半人羊}\r\n\r\n达到4级以后提高半人羊的攻击力与防御力。此外，阿兹鲁斯为王国每天额外提供250金币，1木材和1矿石。",
+    "hero.neutral-heroes.hotaneutralheroes.azirus.specialty.name": "半人羊/资源",
+    "hero.neutral-heroes.hotaneutralheroes.azirus.specialty.tooltip": "特长：半人羊，金币，木材，矿石",
+    "hero.neutral-heroes.hotaneutralheroes.godfrey.biography": "幸运自出生起就与矮精灵紧密相连。每隔几年，就会有一位矮精灵在出生时就带着一种超凡的祝福。戈弗雷自己也并不完全明白为什么他的同族在他的影响下能够像凤凰一样从灰烬中重生。他将其解释为……一种幸运！",
+    "hero.neutral-heroes.hotaneutralheroes.godfrey.name": "戈弗雷",
+    "hero.neutral-heroes.hotaneutralheroes.godfrey.specialty.description": "{矮精灵}\r\n\r\n戈弗雷麾下的所有矮精灵获得像凤凰一样从灰烬中重生的技能。此外，戈弗雷为王国每天额外提供1矿石。",
+    "hero.neutral-heroes.hotaneutralheroes.godfrey.specialty.name": "矮精灵/水晶",
+    "hero.neutral-heroes.hotaneutralheroes.godfrey.specialty.tooltip": "特长：矮精灵，水晶",
+    "hero.neutral-heroes.hotaneutralheroes.oukranos.biography": "奥克拉诺斯是一位充满魅力的领导者，他指挥着遗址带有坚定不移的忠诚夺心魔部队。尽管有人说他奴役了夺心魔的心智，但夺心魔们坚称追随他是出于它们自己的自由意志。",
+    "hero.neutral-heroes.hotaneutralheroes.oukranos.name": "奥克拉诺斯",
+    "hero.neutral-heroes.hotaneutralheroes.oukranos.specialty.description": "{夺心魔}\r\n\r\n每5级提高夺心魔的速度5%，所领导的夺心魔攻击不受反击。此外，奥克拉诺斯总是以高级的效果来施放蛊惑人心法术。",
+    "hero.neutral-heroes.hotaneutralheroes.oukranos.specialty.name": "夺心魔/蛊惑人心",
+    "hero.neutral-heroes.hotaneutralheroes.oukranos.specialty.tooltip": "特长：夺心魔，蛊惑人心",
+    "hero.neutral-heroes.wogneutralheroes.cristian.biography": "克里斯蒂安被誉为“冰与火之将军”。据说他指挥的神射手无论在冰冷的寒地还是炽热的火山地都发挥得很好。",
+    "hero.neutral-heroes.wogneutralheroes.cristian.name": "克里斯蒂安",
+    "hero.neutral-heroes.wogneutralheroes.cristian.specialty.description": "{极地神射手}\r\n\r\n克里斯蒂安可以将极地神射手与熔岩神射手相互转化。此外，克里斯蒂安为王国每天额外提供1水银。",
+    "hero.neutral-heroes.wogneutralheroes.cristian.specialty.name": "极地神射手/水银",
+    "hero.neutral-heroes.wogneutralheroes.cristian.specialty.tooltip": "特长：极地神射手，水银",
+    "hero.neutral-heroes.wogneutralheroes.cyrilla.biography": "作为席尔瓦半人马的女祭司，西里拉据说能够吸取敌人的魔法力量来增强自己的部队，使用敌人的魔法能力反击他们。",
+    "hero.neutral-heroes.wogneutralheroes.cyrilla.name": "西里拉",
+    "hero.neutral-heroes.wogneutralheroes.cyrilla.specialty.description": "{席尔瓦半人马}\r\n\r\n席尔瓦半人马获得不受反击，将敌方英雄20%的魔法值转移给己方英雄。此外，西里拉总是以高级的效果来施放霹雳闪电。",
+    "hero.neutral-heroes.wogneutralheroes.cyrilla.specialty.name": "席尔瓦半人马/霹雳闪电",
+    "hero.neutral-heroes.wogneutralheroes.cyrilla.specialty.tooltip": "席尔瓦半人马，霹雳闪电",
+    "hero.neutral-heroes.wogneutralheroes.dankan.biography": "丹坎曾是游牧民族的伟大领袖，他和他的游牧同胞在一场大战中被精灵和他们的独角神兽伏击，不幸陨落。据说他强烈的求胜意志导致他复生成为了一个亡灵。他的游牧部落随他一起复生，他们的马匹则变成了梦魇兽。",
+    "hero.neutral-heroes.wogneutralheroes.dankan.name": "丹坎",
+    "hero.neutral-heroes.wogneutralheroes.dankan.specialty.description": "{梦魇兽}\r\n\r\n达到6级以后提高梦魇兽的攻击力与防御力，梦魇兽憎恨独角神兽。此外，丹坎领导的部队里正义与中立生物混合不会导致士气下降，为王国每天额外提供1硫磺。",
+    "hero.neutral-heroes.wogneutralheroes.dankan.specialty.name": "梦魇兽/硫磺",
+    "hero.neutral-heroes.wogneutralheroes.dankan.specialty.tooltip": "特长：梦魇兽，硫磺",
+    "hero.neutral-heroes.wogneutralheroes.hegnaar.biography": "赫格纳尔与地狱战马如此合拍，以致让人们觉得他的前世是一匹地狱战马。据说他拥有一股狂暴而炽热的精神，该精神强烈到他必须通过火焰般的怒吼来释放他的愤怒。",
+    "hero.neutral-heroes.wogneutralheroes.hegnaar.name": "赫格纳尔",
+    "hero.neutral-heroes.wogneutralheroes.hegnaar.specialty.description": "{地狱战马}\r\n\r\n每6级提高地狱战马10HP，地狱战马获得龙息。此外，赫格纳尔施放的烈火魔墙效果提高20%。",
+    "hero.neutral-heroes.wogneutralheroes.hegnaar.specialty.name": "地狱战马/烈火魔墙",
+    "hero.neutral-heroes.wogneutralheroes.hegnaar.specialty.tooltip": "特长：地狱战马，烈火魔墙",
+    "hero.neutral-heroes.wogneutralheroes.morgana.biography": "莫甘娜是一位拥有强大力量的女巫。她出生于世界上最强的几个地脉之一，吸收了它的力量并与之和谐共鸣。据说她能够在战斗中控制魔法的流动，使魔法更容易流向她的盟友，同时阻碍魔法流向敌人。",
+    "hero.neutral-heroes.wogneutralheroes.morgana.name": "莫甘娜",
+    "hero.neutral-heroes.wogneutralheroes.morgana.specialty.description": "{女巫}\r\n\r\n莫甘娜麾下的女巫可以减少友方3魔法值消耗，增加敌方5魔法值消耗。莫甘娜每天额外回复5点魔法值。",
+    "hero.neutral-heroes.wogneutralheroes.morgana.specialty.name": "女巫/魔法回复",
+    "hero.neutral-heroes.wogneutralheroes.morgana.specialty.tooltip": "特长：女巫，魔法回复",
+    "hero.neutral-heroes.wogneutralheroes.rashnar.biography": "狼王拉什纳尔据说是全境最凶猛、最令人畏惧的狼人，毫无疑问他是可以指挥任何狼群的首领狼。",
+    "hero.neutral-heroes.wogneutralheroes.rashnar.name": "拉什纳尔",
+    "hero.neutral-heroes.wogneutralheroes.rashnar.specialty.description": "{狂狼人}\r\n\r\n拉什纳尔麾下的狂狼人获得无限反击和吸取生命10%的技能。此外，拉什纳尔为王国每天额外提供1水晶。",
+    "hero.neutral-heroes.wogneutralheroes.rashnar.specialty.name": "狂狼人/水晶",
+    "hero.neutral-heroes.wogneutralheroes.rashnar.specialty.tooltip": "特长：狂狼人，水晶",
+    "hero.neutral-heroes.wogneutralheroes.rossa.biography": "罗莎曾是全境最美丽的女王之一。即便在死后，据说她也依然拥有迷人的美貌，这种美丽如此迷人，以至于她死去的部队的灵魂也会复生，继续追随她。",
+    "hero.neutral-heroes.wogneutralheroes.rossa.name": "罗莎",
+    "hero.neutral-heroes.wogneutralheroes.rossa.specialty.description": "{鬼魂}\r\n\r\n罗莎麾下的鬼魂能无视敌人一半防御。此外，罗莎为王国每天额外提供1水银。",
+    "hero.neutral-heroes.wogneutralheroes.rossa.specialty.name": "鬼魂/水银",
+    "hero.neutral-heroes.wogneutralheroes.rossa.specialty.tooltip": "特长：鬼魂，水银",
+    "hero.neutral-heroes.wogneutralheroes.sergiush.biography": "塞尔吉乌斯据传是这片土地上最执着最狂热的领袖之一。他从不接受失败，意志如此坚强，甚至能使死亡本身都从对他的军队有所退让，让部分士兵在死后可以重新回到他的部队中。",
+    "hero.neutral-heroes.wogneutralheroes.sergiush.name": "塞尔吉乌斯",
+    "hero.neutral-heroes.wogneutralheroes.sergiush.specialty.description": "{战争狂热者}\r\n\r\n塞尔吉乌斯指挥的战争狂热者死后获得重生。此外，塞尔吉乌斯自动施放高级百发百中作为战斗开场法术。",
+    "hero.neutral-heroes.wogneutralheroes.sergiush.specialty.name": "战争狂热者/百发百中",
+    "hero.neutral-heroes.wogneutralheroes.sergiush.specialty.tooltip": "特长：战争狂热者，百发百中",
+    "hero.neutral-heroes.wogneutralheroes.sherkan.biography": "舍尔坎被誉为“活着的黑暗”，他是这篇土地上最令人畏惧的血污怪之一。无论舍尔坎身在何处，黑暗都伴随其左右。",
+    "hero.neutral-heroes.wogneutralheroes.sherkan.name": "舍尔坎",
+    "hero.neutral-heroes.wogneutralheroes.sherkan.specialty.description": "{血污怪}\r\n\r\n所有舍尔坎麾下的血污怪有30%的几率在攻击后释放酸性呼吸，对被攻击的每个生物造成10点伤害。此外，舍尔坎自带黑暗天幕。",
+    "hero.neutral-heroes.wogneutralheroes.sherkan.specialty.name": "血污怪/黑暗天幕",
+    "hero.neutral-heroes.wogneutralheroes.sherkan.specialty.tooltip": "特长：血污怪，黑暗天幕",
+    "hero.neutral-heroes.wogneutralheroes.shrin.biography": "什林是一种父母用来吓唬孩子，让他们乖乖听话的生物。据说他和他的圣侏儒同伴们凭借他们狡猾的恶作剧摧毁了许多王国。",
+    "hero.neutral-heroes.wogneutralheroes.shrin.name": "什林",
+    "hero.neutral-heroes.wogneutralheroes.shrin.specialty.description": "{圣侏儒}\r\n\r\n每3级增加圣侏儒3点HP，圣侏儒获得额外两次攻击。此外，什林为王国每天额外提供500金币。",
+    "hero.neutral-heroes.wogneutralheroes.shrin.specialty.name": "圣侏儒/金币",
+    "hero.neutral-heroes.wogneutralheroes.shrin.specialty.tooltip": "特长：圣侏儒，金币",
+    "hero.neutral-heroes.wogneutralheroes.unrish.biography": "昂里斯被誉为“灾难的先兆”。众所周知，当昂里斯被派遣去传递一条消息时，传递消息通常会伴随着接收者的毁灭。",
+    "hero.neutral-heroes.wogneutralheroes.unrish.name": "昂里斯",
+    "hero.neutral-heroes.wogneutralheroes.unrish.specialty.description": "{元素使者}\r\n\r\n昂里斯可以将元素使者升级为另一种。此外，昂里斯每天为王国额外提供1宝石。",
+    "hero.neutral-heroes.wogneutralheroes.unrish.specialty.name": "元素使者/宝石",
+    "hero.neutral-heroes.wogneutralheroes.unrish.specialty.tooltip": "特长：元素使者，宝石",
 	"heroClass.neutral-heroes.drifterF.name" : "浪人",
 	"heroClass.neutral-heroes.drifterM.name" : "浪人"
 }
